--- a/BlazorWarehouse/MainLayout.razor
+++ b/BlazorWarehouse/MainLayout.razor
@@ -1,11 +1,40 @@
 ﻿@inherits LayoutComponentBase
 
+
 <header>
-    <a class="btn btn-primary m-1" href="/Index">Home</a>
-    <a class="btn btn-primary m-1" href="/Companies">Companies</a>
-    <a class="btn btn-primary m-1" href="/Employees">Employees</a>
-    <a class="btn btn-primary m-1" href="/Managers">Managers</a>
-    <a class="btn btn-primary m-1" href="/Orders">Orders</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark-subtle">
+        <a class="navbar-brand p-2" href="/Index">Warehouse Manager</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav px-1">
+                <li class="nav-item px-1">
+                    <a class="nav-link" href="/Index">Home</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav px-1">
+                <li class="nav-item">
+                    <a class="nav-link" href="/Companies">Companies</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav px-1">
+                <li class="nav-item">
+                    <a class="nav-link" href="/Employees">Employees</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav px-1">
+                <li class="nav-item">
+                    <a class="nav-link" href="/Managers">Managers</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav px-1">
+                <li class="nav-item">
+                    <a class="nav-link" href="/Orders">Orders</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </header>
 
 <main>
