--- a/BlazorWarehouse/Pages/Managers.razor
+++ b/BlazorWarehouse/Pages/Managers.razor
@@ -1,7 +1,44 @@
 ﻿@page "/Managers"
+@using WarehouseModels
+
+@inject HttpClient Http
 
 <h3>Managers</h3>
 
-@code {
-
+@if (ManagerList == null)
+{
+    <p>Loading...</p>
 }
+else
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Title</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var manager in ManagerList)
+            {
+                <tr>
+                    <td>@manager.FirstName</td>
+                    <td>@manager.LastName</td>
+                    <td>@manager.Title</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+
+
+@code {
+    public List<Manager>? ManagerList { get; set; } = new List<Manager>();
+
+    protected override async Task OnInitializedAsync()
+    {
+        ManagerList = await Http.GetFromJsonAsync<List<Manager>>("api/Managers");
+    }
+}
+
