--- a/BlazorWarehouse/Pages/ManagerCreate.razor
+++ b/BlazorWarehouse/Pages/ManagerCreate.razor
@@ -11,7 +11,7 @@
     [Parameter]
     public int? ManagerId { get; set; }
 
-    public Manager? manager { get; set; }
+    public ManagerViewModel? manager { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
