--- a/BlazorWarehouse/Pages/Company.razor
+++ b/BlazorWarehouse/Pages/Company.razor
@@ -1,16 +1,15 @@
-﻿@page "/Companies"
-@using System.Net.Http.Json;
+﻿@page "/Company"
 @using WarehouseModels
 
 @inject HttpClient http
 
-<h3>Companies</h3>
+<h3>Company</h3>
 
-@if(CompanyList == null) 
+@if (CompanyList == null) 
 {
 	<p>Loading...</p>
 }
-else 
+else
 {
 	<table class="table">
 		<thead>
@@ -23,7 +22,7 @@ else
 			</tr>
 		</thead>
 		<tbody>
-			@foreach(var company in CompanyList) 
+			@foreach (var company in CompanyList) 
 			{
 				<tr>
 					<td>@company.CompanyName</td>
@@ -33,8 +32,8 @@ else
 					<td>@company.PostalCode</td>
 					<td>
 						<a href="@($"CompanyEdit/{company.CompanyId}")">Edit</a> |
-						<a href="@($"CompanyDetails/{company.CompanyId}")">Details</a>
-						<a onclick="@( () => DeleteCompany(company.CompanyId))" @onclick::preventDefault="true" href="">Delete</a>
+						<a href="@($"CompanyDetails/{company.CompanyId}")">Details</a> | 
+						<a @onclick="@( () => DeleteCompany(company.CompanyId))" @onclick:preventDefault="true" href="">Delete</a>
 					</td>
 				</tr>	
 			}
@@ -47,13 +46,13 @@ else
 
 	private async void DeleteCompany(int CompanyId) 
 	{
-		var result = await http.DeleteAsync($"api/managers/{CompanyId}");
+		var result = await http.DeleteAsync($"api/companies/{CompanyId}");
 		CompanyList = await http.GetFromJsonAsync<List<CompanyViewModel>>("api/Companies");
 		StateHasChanged();
 	}
 
 	protected override async Task OnInitializedAsync() 
 	{
-		CompanyList = await http.GetFromJsonAsync<List<CompanyViewModel>>("api/Companies");
+		CompanyList = await http.GetFromJsonAsync<List<CompanyViewModel>>("api/Companies");	
 	}
 }
