add CRUD operations for managers

--- a/BlazorWarehouse/Pages/Manager/Managers.razor
+++ b/BlazorWarehouse/Pages/Manager/Managers.razor
@@ -4,7 +4,9 @@
 @inject HttpClient http
 
 <h3>Managers</h3>
-
+<p>
+    <a href="ManagerCreate">Create New</a>
+</p>
 @if (ManagerList == null)
 {
     <p>Loading...</p>
