--- a/BlazorWarehouse/Pages/Employee/EmployeeCreate.razor
+++ b/BlazorWarehouse/Pages/Employee/EmployeeCreate.razor
@@ -18,18 +18,18 @@
     <div class="row">
         <EditForm Model="@Employee" OnSubmit="@HandleSubmit">
             <div class="form-floating my-2">
-                <InputText id="FirstName" name="FirstName" @bind-Value="Employee.FirstName" class="form-control" placeholder="x" />
+                    <InputText id="FirstName" name="FirstName" @bind-Value="Employee.FirstName" class="form-control" placeholder="x" required />
                 <label for="FirstName">First Name:</label>
             </div>
             <div class="form-floating my-2">
-                <InputText id="LastName" name="LastName" @bind-Value="Employee.LastName" class="form-control" placeholder="x" />
+                    <InputText id="LastName" name="LastName" @bind-Value="Employee.LastName" class="form-control" placeholder="x" required />
                 <label for="LastName">Last Name:</label>
             </div>
             <div class="form-floating my-2">
-                <InputSelect id="Manager" name="Manager" @bind-Value="Employee.ManagerId" class="form-select">
+                <InputSelect id="Manager" name="Manager" @bind-Value="Employee.ManagerId" class="form-select" required>
                         @foreach (var manager in Managers)
                         {
-                            <option value="@manager.ManagerId">@manager.FirstName</option>
+                            <option value="@manager.ManagerId">@manager.FullName</option>
                         }
                 </InputSelect>
                 <label for="Manager">Manager: </label>
