--- a/BlazorWarehouse/Pages/Employee/EmployeeDetails.razor
+++ b/BlazorWarehouse/Pages/Employee/EmployeeDetails.razor
@@ -30,10 +30,10 @@ else
                 @Employee.LastName
             </dd>
             <dt class="col-sm-2">
-                Title
+                Manager
             </dt>
             <dd class="col-sm-10">
-                @Employee.ManagerId
+                @Employee.Manager?.FullName
             </dd>
         </dl>
     </div>
