Added Products page and Product Seeding

--- a/BlazorWarehouse/MainLayout.razor
+++ b/BlazorWarehouse/MainLayout.razor
@@ -30,6 +30,11 @@
             </ul>
             <ul class="navbar-nav px-1">
                 <li class="nav-item">
+                    <a class="nav-link" href="/Products">Products</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav px-1">
+                <li class="nav-item">
                     <a class="nav-link" href="/Orders">Orders</a>
                 </li>
             </ul>
