Readded Components / added ProductCard for Products

--- a/BlazorWarehouse/Components/CompanyCard.razor
+++ b/BlazorWarehouse/Components/CompanyCard.razor
@@ -1,4 +1,4 @@
-﻿<div class="card" style="background-color: @(BackgroundColor ?? "White"); color: @(TextColor ?? "Black")">
+﻿﻿<div class="card" style="background-color: @(BackgroundColor ?? "White"); color: @(TextColor ?? "Black")">
 
 	<div class="card-body">
 
