--- a/BlazorWarehouse/Pages/CompanyOrder.razor
+++ b/BlazorWarehouse/Pages/CompanyOrder.razor
@@ -13,7 +13,7 @@ else
 	<div class="container-fluid">
 		@foreach (var product in Products)
 		{
-			<OrderCard Product="product" Width="180px" BackgroundColor="Beige" />
+			<ProductCard Product="product" Width="180px" BackgroundColor="Beige" />
 		}
 	</div>
 }
