Change Ordering Color Scheme

--- a/BlazorWarehouse/Pages/CompanyOrder.razor
+++ b/BlazorWarehouse/Pages/CompanyOrder.razor
@@ -8,12 +8,12 @@
 }
 else
 {
-	<CompanyCard Company="@Company" BackgroundColor="Blue" />
+	<CompanyCard Company="@Company" BackgroundColor="Brown" />
 
 	<div class="container-fluid">
 		@foreach (var product in Products)
 		{
-			<ProductCard Product="product" Width="180px" BackgroundColor="Beige" />
+			<ProductCard Product="product" Width="180px" BackgroundColor="Orange" />
 		}
 	</div>
 }
