--- a/BlazorWarehouse/Components/ProductCard.razor
+++ b/BlazorWarehouse/Components/ProductCard.razor
@@ -2,7 +2,7 @@
 
 <div class="card" 
 	style="background-color:@(BackgroundColor ?? "White");color:@(TextColor ?? "Black"); display:inline-block; width: @(Width ?? "200px");"
-	@onclick="@( () => AddProductToCart(Product.ProductId))">
+	@onclick="@( () => OnCardClick?.Invoke(Product.ProductId, Product.ProductName, Product.ProductPrice))">
 
 	<div class="card-body">
 
@@ -30,8 +30,16 @@
 	[Parameter]
 	public string Width { get; set; }
 
-	protected async void AddProductToCart(int ProductId)
-	{
-		await js.InvokeVoidAsync("alert", $"The item id of product clicked was: {Product.ProductId}");
-	}
+	[Parameter]
+	public Action<int, string, float>? OnCardClick { get; set; }
+
+	[Parameter]
+	public int companyId { get; set; }
+
+	[Parameter]
+	public int orderId { get; set; }
+
+
+
+
 }
